[gd_scene load_steps=9 format=3 uid="uid://jyd6yyy3udk1"]

[ext_resource type="Script" path="res://script/arvore.gd" id="1_67wva"]
[ext_resource type="Texture2D" uid="uid://bu0qibde7mrgq" path="res://assets/my_create/arvore/arvore_cortada.png" id="1_eq2qe"]
[ext_resource type="Texture2D" uid="uid://d4mmkwdwtm3co" path="res://assets/my_create/arvore/arvore_cortando1.png" id="2_b6i4c"]
[ext_resource type="Texture2D" uid="uid://bqctn35ve3385" path="res://assets/my_create/arvore/arvore_cortando2.png" id="3_l2ysx"]
[ext_resource type="Texture2D" uid="uid://covyl3rjdj5d2" path="res://assets/my_create/arvore/arvore.png" id="4_qjhdq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1om0"]
size = Vector2(22, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_iucxu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_eq2qe")
}],
"loop": true,
"name": &"cortada",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b6i4c")
}, {
"duration": 1.0,
"texture": ExtResource("3_l2ysx")
}],
"loop": true,
"name": &"cortando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qjhdq")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkte0"]
size = Vector2(17, 9)

[node name="arvore" type="Area2D"]
monitorable = false
script = ExtResource("1_67wva")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 21.5)
shape = SubResource("RectangleShape2D_r1om0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iucxu")
animation = &"cortada"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, 21.5)
shape = SubResource("RectangleShape2D_hkte0")

[node name="drop_graveto" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = 31.0
offset_right = -1.0
offset_bottom = 39.0
color = Color(1, 1, 1, 0)

[node name="drop_folha" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 13.0
color = Color(1, 1, 1, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
